unpackaged/main/default/objects/UserStore__c/UserStore__c.object-meta.xml
<CustomObject>
    <label>User Store</label>
    <nameField>
        <displayFormat>US-{00000000}</displayFormat>
        <label>User Store Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Users Stores</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>