unpackaged/main/default/objects/UserStore__c/fields/gcp_to_sfdc_sync_id__c.field-meta.xml
<CustomField>
    <fullName>gcp_to_sfdc_sync_id__c</fullName>
    <formula>Store__c &amp;&quot;###&quot;&amp; User__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>gcp to sfdc sync id</label>
    <type>Text</type>
</CustomField>