unpackaged/main/default/objects/UserStore__c/fields/Store__c.field-meta.xml
<CustomField>
    <fullName>Store__c</fullName>
    <label>Store</label>
    <referenceTo>Store__c</referenceTo>
    <relationshipLabel>Client Advisors</relationshipLabel>
    <relationshipName>UsersStores</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>